# TUD_LBM

./: .commit-msg  .copier-answers.yml  .env.example  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  environment.yml  project_setup.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  documentation.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
example/: config_complex.toml  config_simple.toml  example_run.py  example_run_complex.py  example_run_simple.py
examples/: config_complex.toml  config_simple.toml  example_run_complex.py  example_run_simple.py
src/: __init__.py  registry.py
src/app_setup/: __init__.py  adapter_base.py  adapter_toml.py  dir_config.py  registry.py  saving_config.py  simulation_config.py  simulation_setup.py
src/cli/: __init__.py  cli.py
src/config/: __init__.py  adapter_base.py  adapter_dict.py  adapter_toml.py  config_loader.py  dir_config.py  jax_config.py  keys.py  saving_config.py  simulation_config.py
src/core/: __init__.py  config_loader.py  run.py  simulation_factory.py  simulation_runner.py  step_result.py
src/core/collision/: __init__.py  base.py  collision_BGK.py  collision_MRT.py  collision_bgk.py  source.py
src/core/grid/: __init__.py  grid.py
src/core/lattice/: lattice.py
src/core/run/: __init__.py  run.py
src/core/simulation/: __init__.py  base.py  multi_phase.py  single_phase.py
src/core/stream/: stream.py
src/core/update/: update.py  update_multiphase.py  update_multiphase_hysteresis.py
src/domain/: __init__.py
src/domain/grid/: __init__.py
src/domain/lattice/: __init__.py
src/io/: __init__.py
src/operators/: __init__.py  _loader.py  factory.py  protocols.py
src/operators/boundary/: __init__.py  _bounce_back.py  _symmetry.py  bounce_back.py  composite.py  periodic.py  symmetry.py
src/operators/boundary_condition/: __init__.py  boundary_condition.py
src/operators/collision/: __init__.py  _bgk.py  base.py  bgk.py  collision_base.py  collision_bgk.py  collision_mrt.py  factory.py  mrt.py  source.py
src/operators/differential/: __init__.py  _gradient.py  _gradient_wetting.py  _laplacian.py  _pad_utils.py  config.py  factory.py  gradient.py  laplacian.py  operators.py  pad_modes.py
src/operators/equilibrium/: __init__.py  _equilibrium.py  equilibrium.py  equilibrium_wb.py
src/operators/force/: __init__.py  _electric.py  _gravity.py  composite_force.py  electric.py  electric_force.py  gravitational_force.py  gravity.py  source.py  source_term.py
src/operators/initialise/: __init__.py  factory.py  from_file.py  initilise.py  multiphase_bubble.py  multiphase_bubble_bot.py  multiphase_bubble_bubble.py  multiphase_droplet.py  multiphase_droplet_top.py  multiphase_droplet_variable_radius.py  multiphase_lateral_bubble.py  standard.py  wetting.py  wetting_chemical_step.py
src/operators/macroscopic/: __init__.py  _single_phase.py  macroscopic.py  macroscopic_multiphase_cs.py  macroscopic_multiphase_dw.py  multiphase.py  single_phase.py
src/operators/stream/: stream.py
src/operators/streaming/: __init__.py  streaming.py
src/operators/wetting/: __init__.py  contact_angle.py  contact_line.py  contact_line_location.py  hysteresis.py  wetting_util.py
src/runner/: __init__.py  io_callbacks.py  run.py  simulation_factory.py  simulation_runner.py  step.py  step_result.py
src/setup/: __init__.py  lattice.py  simulation_setup.py
src/simulation/: __init__.py  base.py  multi_phase.py  multiphase.py  single_phase.py
src/simulation_domain/grid/: __init__.py
src/simulation_operators/: __init__.py
src/simulation_operators/boundary_condition/: __init__.py  base.py  bounce_back.py  boundary_condition.py  periodic.py  symmetry.py  wetting.py
src/simulation_operators/collision_models/: __init__.py  collision_base.py  collision_bgk.py  collision_mrt.py
src/simulation_operators/differential/: __init__.py  gradient.py  laplacian.py
src/simulation_operators/equilibrium/: __init__.py  equilibrium_wb.py
src/simulation_operators/force/: __init__.py  composite_force.py  electric_force.py  force_base.py  gravitational_force.py  source.py
src/simulation_operators/initialise/: __init__.py  base.py  init_from_file.py  initilise.py  multiphase_bubble.py  multiphase_bubble_bot.py  multiphase_bubble_bubble.py  multiphase_droplet.py  multiphase_droplet_top.py  multiphase_droplet_variable_radius.py  multiphase_lateral_bubble.py  standard.py  wetting.py  wetting_chemical_step.py
src/simulation_operators/macroscopic/: __init__.py  macroscopic.py  macroscopic_multiphase_cs.py  macroscopic_multiphase_dw.py
src/simulation_operators/stream/: __init__.py  stream.py
src/simulation_operators/wetting/: __init__.py  contact_angle.py  contact_line_location.py  wetting_util.py
src/simulation_type/: __init__.py  base.py  multiphase.py  single_phase.py
src/state/: __init__.py  state.py
src/tud_lbm/: __init__.py  cli.py  config.py  my_module.py
src/update/: __init__.py  update.py  update_multiphase.py  update_multiphase_hysteresis.py
src/update_timestep/: __init__.py  update.py  update_multiphase.py  update_multiphase_hysteresis.py
src/util/: __init__.py  cli.py  io.py  plotting.py
tests/: __init__.py  conftest.py  test_adapter_toml.py  test_bc_jax_hashable.py  test_config_save_adapter.py  test_data_structures.py  test_differential.py  test_force_operators.py  test_functional_api.py  test_initialisation_and_bc_jax.py  test_initialise.py  test_my_module.py  test_no_width_key.py  test_operator_factory.py  test_optional_dependencies.py  test_plotting.py  test_protocols.py  test_pure_operators.py  test_pure_step_and_run.py  test_registry.py  test_simulation_setup.py  test_step_and_run.py  test_wetting.py
tests/example_for_test/: config_complex.toml  example_run_complex.py  example_run_simple.py
tests/integration/: test_poiseuille.py
(+40 files in other folders)
