# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Sacha Szkudlarek", email = "s.b.szkudlarek@tudelft.nl" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  # Install via conda for best results
  # See environment.yml for conda-based app_setup
]
description = "This is a lattice Boltzmann method package developed at Delft University of Technology."
keywords = ["LBM"," TUD"," Delft University of Technology"]
license = {file = "LICENSE"}
name = "tud_lbm"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
version = "2026.0.0a1"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "ruff",
    "python-dotenv",
]
publishing = [
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi",
]

[project.urls]
Repository = "https://github.com/szkuds/tud_lbm"
Issues = "https://github.com/szkuds/tud_lbm/issues"
ReadTheDocs = "https://tud_lbm.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tud-lbm = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 120
output-format = "concise"
extend-exclude = ["docs"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    # --- ignores ---
    "ANN204", # Missing return type annotation for special (dunder) method
    "ANN205", # Missing return type annotation for staticmethod
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`

    # --- annotations (scientific/JAX code doesn't require full typing) ---
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN201", # Missing return type annotation for public function
    "ANN202", # Missing return type annotation for private function
    "ANN401", # Dynamically typed expressions (typing.Any) disallowed

    # --- docstring style (noisy for physics code) ---
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D200", # No blank lines allowed after function docstring
    "D205", # 1 blank line required between summary line and description
    "D301", # Use r""" if any backslashes in a docstring
    "D415", # First line should end with a period
    "D417", # Missing argument description in the docstring

    # --- exception message style (verbose for scientific code) ---
    "TRY003", # Avoid specifying long messages outside the exception class
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal

    # --- TYPE_CHECKING imports (JAX type annotations cause circular imports) ---
    "TC001", # Move application import into a type-checking block
    "TC002", # Move third-party import into a type-checking block
    "TC003", # Move standard library import into a type-checking block

    # --- scientific/numeric code patterns ---
    "PLR2004", # Magic value used in comparison (physics constants are intentional)
    "PLR0913", # Too many arguments in function definition (LBM operators need many params)
    "RUF002",  # Ambiguous unicode in docstring (Greek letters intentional in physics docs)
    "RUF003",  # Ambiguous unicode in comment

    # --- exception handling patterns ---
    "BLE001", # Do not catch blind exception
    "S110",   # try-except-pass detected

    # --- print statements (needed in examples and CLI output) ---
    "T201",   # `print` found

    # --- import location (lazy imports needed for optional JAX deps) ---
    "PLC0415", # `import` should be at the top-level of a file
    "COM812",
    "ARG",
    "C901"
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
    "SLF001", # Private member access
    "INP001", # File is part of an implicit namespace package
    "S108" # Probable insecure usage of temporary file or directory
]
# Examples are standalone scripts, not part of the package
"examples/**.py" = [
    "INP001", # File is part of an implicit namespace package
    "ANN201", # Missing return type annotation
]

"src/operators/boundary/composite.py" = ["I001"]
"src/util/plotting/__init__.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["tud_lbm"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.0.2"

[[tool.bumpversion.files]]
filename = "src/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
